--- a/doc/src/Glossary.dox
+++ b/doc/src/Glossary.dox
@@ -269,7 +269,7 @@
  * "ManagerInterface".
  *
  *
- * @section plugin_path_var $OAIO_PLUGIN_PATH
+ * @section plugin_path_var $OPENASSETIO_PLUGIN_PATH
  *
  * This is the environment variable used to discover @ref ManagerPlugin
  * "ManagerPlugins", it is searched left-to-right, using standard
