--- a/doc/src/Examples.dox
+++ b/doc/src/Examples.dox
@@ -1,7 +1,7 @@
 /*!
  * @page examples Examples
  *
- * @note This section is a work-in-progress. Over time we will add
+ * @note This OAIO is a work-in-progress. Over time we will add
  * flow diagrams for key operations that happen through the API, along
  * with more extensive sample implementations for both @ref host "hosts"
  * and @ref manager "managers". Currently it is limited to illustrating a
